--- a/pycon_project/templates/site_base.html
+++ b/pycon_project/templates/site_base.html
@@ -57,7 +57,7 @@
     </div>
 
     <p>
-        PyCon Taiwan 2013 built with <a href="http://djangoproject.com">Django</a> and <a href="http://pinaxproject.com">Pinax</a>. Hosting provided by <a href="http://streetvoice.com">StreetVoice</a>.
+        PyCon Taiwan 2013 built with <a href="http://djangoproject.com">Django</a> and <a href="http://pinaxproject.com">Pinax</a>. Hosting provided by <a href="http://streetvoice.com">StreetVoice</a>. Built by Lemonlatte, LittleQ and Shane.
     <br />
         Questions? Comments? Contact <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>
     </p>
