Update the date and the place.

--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -51,8 +51,8 @@
                         </div>
                         <div class="span7">
                             <div id="head-desc">
-                            <div class="date">{% trans "Coming Soon..." %}</div>
-                            <div class="address">{% trans "Humanities & Social Sciences Building, Academia Sinica" %}</div>
+                            <div class="date">{% trans "May 25-26" %}</div>
+                            <div class="address">{% trans "Academia Sinica, Taipei" %}</div>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                 }
             });
         </script>
-        
+
         <script type="text/javascript">
             $(document).ready(function($) {
                 $("a.boxes-edit-link").click(function() {
@@ -168,9 +168,9 @@
                 });
             });
         </script>
-        
+
         {% analytics %}
-        
+
         {% block extra_body_base %}
             {% block extra_body %}{% endblock %}
         {% endblock %}
