Apply i18n_pattern to the site
* Fix some url references.

--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -21,7 +21,7 @@
                         <a href="{% url program %}" id="link-program">{% trans "Program" %}</a>
                     </li>
                     <li class="{% active request "/2013/sponsors/" %}">
-                        <a href="{% url wakawaka_page 'sponsors' %}" id="link-sponsors">{% trans "Sponsors" %}</a>
+                        <a href="{% url sponsor_list %}" id="link-sponsors">{% trans "Sponsors" %}</a>
                     </li>
                     <li class="{% active request "/2013/speaker/" %}">
                         <a href="{% url speaker_dashboard %}" id="link-speakers">{% trans "Speakers" %}</a>
