--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -27,7 +27,7 @@
 
                 {% box "homepage_main" %}
 
-                <p class="learn-more"><a href="{% url wakawaka_page 'about' %}">{% trans "Learn more" %}...</a></p>
+                <p class="learn-more"><a href="{% url about %}">{% trans "Learn more" %}...</a></p>
             </div>
 
             <h1><span>{% trans "Announcements" %}</span></h1>
