Remove wakawaka from the project

--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -1,4 +1,4 @@
-{% load wakawaka_tags i18n common %}
+{% load i18n common %}
 <div class="navbar">
     <div class="navbar-inner">
         <div class="container">
