--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends "site_base.html" %}
-{% load boxes_tags biblion_tags sponsors_pro_tags thumbnail i18n %}
+{% load brick boxes_tags biblion_tags sponsors_pro_tags thumbnail i18n %}
 
 {% block head_title_base %}{% trans "Home" %} / {{ block.super }}{% endblock %}
 
@@ -20,45 +20,47 @@
         {% box "mainbox" %}
     </div>
     {% endcomment %}
-    <div class="row">
-        <div class="span8">
-            <div id="whatispycon">
-                <h1>{% trans "What is PyCon?" %}</h1>
 
+    {% latest_announcements as posts %}
+
+    <div class="container" style="">
+        <div class="row">
+            <div class="span6">
+                <img src="{{ STATIC_URL }}img/aboutpycon.jpg" alt="">
                 {% box "homepage_main" %}
-
-                <p class="learn-more"><a href="{% url about %}">{% trans "Learn more" %}...</a></p>
+                <img src="{{ STATIC_URL }}img/gallery.jpg" alt="">
             </div>
-
-            <h1><span>{% trans "Announcements" %}</span></h1>
-
-            {% latest_announcements as posts %}
-            {% for post in posts %}
+            <div class="span6 brick first">
                 <div class="blog-post">
-                    <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                    {% include "biblion/dateline.html" %}
-                    <div class="teaser">{{ post.teaser_html|safe }}</div>
+                    <h2><a href="{{ posts.0.get_absolute_url }}">{{ posts.0.title }}</a></h2>
+                    <p class="post_dateline">
+                        <span class="date">{% if posts.0.published %}{{ posts.0.published|date:"Y.m.d" }}{% else %}Not published yet{% endif %}</span>
+                        by <span class="author">{{ posts.0.author.username }}</span>
+                    </p>
+                    <div class="teaser">
+                        {{ posts.0.teaser_html|safe }}
+                    </div>
                 </div>
-            {% empty %}
-            <p>{% trans "No blog posts have been published." %}</p>
-            {% endfor %}
+            </div>
         </div>
+        {% for post in posts %}
+        {% if forloop.counter0 > 0 %}
+            {% if forloop.counter0|start_row %}
+            <div class="row">
+            {% endif %}
+                <div class="span3 brick">
+                    <div class="blog-post">
+                        <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+                        {% include "biblion/dateline.html" %}
+                        <div class="teaser">{{ post.teaser_html|safe }}</div>
+                    </div>
 
-        <div class="span4">
-            {% include "_twitter.html" %}
-
-            <div style="margin-top: 50px">
-                <h3><a href="{% url sponsor_list %}">{% trans "Eyes on our hardcore sponsors!" %}</a></h1>
+                </div>
+            {% if forloop.counter0|end_row %}
             </div>
-            {% comment %}
-            <div class="sponsor">
-                <img src="http://placehold.it/180x75&text=Sponsor" />
-            </div>
-            <div class="sponsor">
-                <img src="http://placehold.it/180x75&text=Sponsor" />
-            </div>
-            {% endcomment %}
-        </div>
+            {% endif %}
+        {% endif %}
+        {% endfor %}
     </div>
 
     {#  SECTION: silver and media sponsors #}
