--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -25,7 +25,6 @@
 
     <body class="{% block body_class %}{% endblock %} {% if LANGUAGE_BIDI %}bidi{% endif %}" id="{% block body_id %}{% endblock %}">
 
-        <div class="container">
 
 
             <header>
@@ -46,8 +45,6 @@
                         {% endfor %}
                     {% endif %}
 
-                    <div class="container banner"></div>
-
                     {% comment %}
                     {% block header %}
                         <h1 id="logo">{% block logo_link_image %}{% endblock %}</h1>
@@ -61,7 +58,7 @@
                     {% endcomment %}
                 </div>
             </header>
-
+            <div class="banner"></div>
             <section id="subnav">
                 <div class="container">
                     {% block subnav_base %}{% block subnav %}{% endblock %}{% endblock %}
@@ -85,7 +82,7 @@
             <hr />
             <div class="container">{% block footer %}{% endblock %}</div>
         </footer>
-        </div>
+
 
         <script type="text/javascript" src="{% block jquery_src %}https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js{% endblock %}"></script>
         <script src="{{ STATIC_URL }}js/base.js" type="text/javascript"></script>
