--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -27,7 +27,7 @@
 
 
 
-            <header>
+            <header class="header">
                 <div class="container">
                     <div>
                         {% include "_account_bar.html" %}
