--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -56,6 +56,14 @@
                     </div>
                 </div>
             {% if forloop.counter0|end_row %}
+                <div class="span3 brick">
+                    <div class="blog-post">
+                        <h2><a href="#">{% trans "Eyes on our hardcore " %}<span class="emphasis">{%trans "Sponsors" %}</span>!</a></h2>
+                        <div class="teaser">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
             {% endif %}
         {% endif %}
