Remove hover color of bootstrap

--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -63,6 +63,10 @@ header{
     text-shadow: none;
 }
 
+.navbar .nav > li > a:hover{
+    color: inherit;
+}
+
 .banner{
     height: 327px;
     background-image: url(../img/mkv.jpg);
