--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -22,7 +22,6 @@
             {% block extra_head %}{% endblock %}
         {% endblock %}
     </head>
-
     <body class="{% block body_class %}{% endblock %} {% if LANGUAGE_BIDI %}bidi{% endif %}" id="{% block body_id %}{% endblock %}">
 
 
@@ -59,6 +58,8 @@
                 </div>
             </header>
             <div class="banner">
+                <div class="images">
+                </div>
                 <div class="banner_caption">
                     <a href="http://tw.pycon.org/2013/venue/">
                     <p>{% trans "No. 128, Sec. 2, Academic Rd., Nankang, Taipei, Taiwan" %}</p>
@@ -92,9 +93,19 @@
 
 
         <script type="text/javascript" src="{% block jquery_src %}https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js{% endblock %}"></script>
+        <script type="text/javascript">
+            $(function(){
+                function dynamic_banner(){
+                    var banner_width = Math.min(0, Math.max(-(1920 - $(window).width()) / 2, -467));
+                    $(".banner .images").css("margin-left", banner_width + "px");
+                }
+                dynamic_banner();
+                $(window).on("resize", dynamic_banner);
+            })
+        </script>
         <script src="{{ STATIC_URL }}js/base.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script>
+        <!--script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script-->
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/jquery.markitup.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/sets/markdown-custom/set.js"></script>
         {% include "_facebox_js.html" %}
