--- a/pycon_project/templates/site_base.html
+++ b/pycon_project/templates/site_base.html
@@ -14,7 +14,7 @@
     <script src="{{ STATIC_URL }}js/less-1.2.1.min.js"></script>
     {% endcomment %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-responsive.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/custom.css" />
     <link rel="alternate" type="application/atom+xml" href="{% url blog_feed "general" %}" title="blog feed"/>
     {% block extra_head %}{% endblock %}
