Fixed broken layout in homepage

--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -52,7 +52,7 @@
         {% for post in posts %}
         {% if forloop.counter0 > 0 %}
             {% if forloop.counter0|start_row %}
-            <div class="row">
+            <div class="row-fluid">
             {% endif %}
                 <div class="span3 brick">
                     <div class="blog-post">
