--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -101,6 +101,7 @@ header{
 
 .banner_caption p{
     font-size: 1.5em;
+    font-family: '微軟正黑體', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .brick{
