--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -28,7 +28,7 @@
             <div class="span6">
                 <div class="banner_caption">
                     <a href="http://tw.pycon.org/2013/venue/">
-                    <p>{% trans "No. 128, Sec. 2, Academic Rd., Nankang, Taipei, Taiwan" %}</p>
+                    <p>{% trans "Academia Sinica: Humanities and Social Sciences Building" %}</p>
                     <p>{% trans "May 25 - 26" %}</p>
                     </a>
                 </div>
