Updated footer: built by web team now.

--- a/pycon_project/templates/site_base.html
+++ b/pycon_project/templates/site_base.html
@@ -44,7 +44,7 @@
 
 {% block footer %}
     <p>
-        PyCon Taiwan 2013 built with <a href="http://djangoproject.com">Django</a> and <a href="http://pinaxproject.com">Pinax</a>. Hosting provided by <a href="http://streetvoice.com">StreetVoice</a>. Built by Lemonlatte, LittleQ and Shane.
+        PyCon Taiwan 2013 built with <a href="http://djangoproject.com">Django</a> and <a href="http://pinaxproject.com">Pinax</a>. Hosting provided by <a href="http://streetvoice.com">StreetVoice</a>. Built by PyCon Taiwan web team.
     <br />
         Questions? Comments? Contact <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>
     </p>
