Updated banner caption for better look.

--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -28,8 +28,7 @@
             <div class="span6">
                 <div class="banner_caption">
                     <a href="http://tw.pycon.org/2013/venue/">
-                    <p>{% trans "Academia Sinica: Humanities and Social Sciences Building" %}</p>
-                    <p>{% trans "May 25 - 26" %}</p>
+                    <p>{% trans "Academia Sinica: Humanities and Social Sciences Building on May 25 - 26" %}</p>
                     </a>
                 </div>
                 <img src="{{ STATIC_URL }}img/aboutpycon.jpg" alt="">
