--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -36,7 +36,7 @@
             </ul>
             <form action="/i18n/setlang/" method="post" class="navbar-form pull-right language_form">{% csrf_token %}
                 <span>Language&nbsp;&nbsp;</span>
-                <input name="next" type="hidden" value="/" />
+                <input name="next" type="hidden" value="{{ no_lang_path }}" />
                 <select class="span2" name="language">
                 {% for lang in LANGUAGES %}
                     <option value="{{ lang.0 }}"{% ifequal request.LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>{{ lang.1 }}</option>
