Update the proposal form
* Fix the missing reference of foreign key

--- a/pycon_project/templates/review/_review_table.html
+++ b/pycon_project/templates/review/_review_table.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="metadata">
                     {{ proposal.get_audience_level_display }}
-                    {{ proposal.get_session_type_display }}
+                    {{ proposal.get_kind_display }}
                     by
                     {{ proposal.speaker }}
                     {% if proposal.additional_speakers.all %}
