--- a/pycon_project/templates/speakers/dashboard_auth_speaker.html
+++ b/pycon_project/templates/speakers/dashboard_auth_speaker.html
@@ -2,12 +2,12 @@
 {% load boxes_tags i18n %}
 
 {% block content %}
-    
+
     {% if accepting_proposals %}
         <p>{% box "talk-proposals" %}</p>
-        
+
         <h3>{% trans "To submit a talk" %}:</h3>
-        
+
         <ol class="steps">
             <li class="done first">{% trans "sign up and log in" %}</li>
             <li class="done second">{% trans "create a speaker profile" %}</li>
@@ -16,15 +16,15 @@
 
 
         <p><a class="btn" href="{% url speaker_edit %}">{% trans "Edit your speaker profile" %}</a></p>
-        
+
         <p>{% blocktrans %}You will be able to come back and revise your submission until the deadline. Remember that speakers must register and pay to attend the conference.{% endblocktrans %}</p>
     {% else %}
         <p>{% trans "Talk submissions are now closed" %} and the <a href="{% url schedule_list %}">{% trans "schedule has been announced" %}</a>.</p>
 
     {% endif %}
-    
+
     <h2>{% trans "Proposals" %}</h2>
-    
+
     {% if proposals %}
         <table class="table proposals">
             <thead>
@@ -41,7 +41,7 @@
             {% for proposal in proposals %}
             <tr>
                 <td><a href="{% url proposal_detail proposal.pk %}">{{ proposal.title }}</a></td>
-                <td>{{ proposal.kind.name }}</td>
+                <td>{{ proposal.get_kind_display }}</td>
                 <td>{{ proposal.get_audience_level_display }}</td>
                 <td>
                     {% if proposal.cancelled %}
@@ -63,7 +63,7 @@
                 <td>
                     {% if not proposal.cancelled %}
                         {% if request.user == proposal.speaker.user and proposal.can_edit %}
-                            <a href="{% url proposal_edit proposal.pk %}">{% trans "Edit" %}</a> | 
+                            <a href="{% url proposal_edit proposal.pk %}">{% trans "Edit" %}</a> |
                             <a href="{% url proposal_speaker_manage proposal.id %}">{% trans "Add/Remove Speakers" %}</a>
                             {% if proposal.result.accepted %}
                             |
@@ -86,5 +86,5 @@
         {% url proposal_submit as proposal_submit_url %}
         <p>{% trans "No proposals" %}. {% blocktrans %}You can <a href="{{ proposal_submit_url }}">submit one</a> now!{% endblocktrans %}</p>
     {% endif %}
-    
+
 {% endblock %}
