--- a/pycon_project/templates/proposals/proposal_detail.html
+++ b/pycon_project/templates/proposals/proposal_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>{{ proposal.title }}</h1>
-    
+
     <p>
         {% if not proposal.cancelled %}
             {% if request.user == proposal.speaker.user %}
@@ -17,21 +17,21 @@
             Cancelled
         {% endif %}
     </p>
-    
+
     <div>
         {{ proposal.description }}
     </div>
-    
-    <p><b>Type</b>: {{ proposal.kind.name }}</p>
-    
+
+    <p><b>Type</b>: {{ proposal.get_kind_display }}</p>
+
     <div>
         {{ proposal.abstract|safe }}
     </div>
-    
+
     <p><b>Audience level</b>: {{ proposal.get_audience_level_display }}</p>
-    
+
     <p><b>Submitting speaker</b>: {{ proposal.speaker }}</p>
-    
+
     {% if proposal.additional_speakers.all %}
         <p><b>Additional speakers</b>:</p>
         <ul>
@@ -44,16 +44,16 @@
         {% endfor %}
         </ul>
     {% endif %}
-    
+
     {% if request.user == proposal.speaker.user %}
         <p><b>Additional Notes:</b></p>
-    
+
         <p>{{ proposal.additional_notes }}</p>
     {% endif %}
-    
+
     {% comment %}
     <h2>Conversation with Reviewers</h2>
-    
+
     {% for message in proposal.messages.all %}
         <div class="review-box">
             <div class="comment">{{ message.message|safe }}</div>
@@ -61,11 +61,11 @@
         </div>
         <div class="clear"></div>
     {% endfor %}
-    
+
     <h3>Leave a Message</h3>
-    
+
     <p>You can leave a message for the proposer here.</p>
-    
+
     <form action="" method="POST" class="uniForm" accept-charset="utf-8">
         {% csrf_token %}
         <fieldset>
