--- a/pycon_project/templates/_nav.html
+++ b/pycon_project/templates/_nav.html
@@ -31,7 +31,7 @@
                     <a href="{% url venue_detail %}" id="link-venue">{% trans "Venue" %}</a>
                 </li>
                 <li class="{% active request "/2013/blog/" %}">
-                    <a href="/2013/blog/" id="link-blog">{% trans "Blog" %}</a>
+                    <a href="{% url blog %}" id="link-blog">{% trans "Blog" %}</a>
                 </li>
             </ul>
             <form action="/i18n/setlang/" method="post" class="navbar-form pull-right language_form">{% csrf_token %}
