--- a/pycon_project/static/2013/css/custom.css
+++ b/pycon_project/static/2013/css/custom.css
@@ -4,7 +4,7 @@ body {
     color: #878787;
 }
 
-p, li {
+p, .content li {
     /* Bootstrap v2.0.1 Styles */
     margin: 0 0 9px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
