--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -32,49 +32,55 @@
                     </a>
                 </div>
                 <img src="{{ STATIC_URL }}img/aboutpycon.jpg" alt="">
-                {% box "homepage_main" %}
+                <div id="pycon_intro">{% box "homepage_main" %}</div>
                 <img src="{{ STATIC_URL }}img/gallery.jpg" alt="">
             </div>
-            <div class="span6 brick first">
+            <div class="span6 brick sponsor_brick">
                 <div class="blog-post">
-                    <h2><a href="{{ posts.0.get_absolute_url }}">{{ posts.0.title }}</a></h2>
-                    <p class="post_dateline">
-                        <span class="date">{% if posts.0.published %}{{ posts.0.published|date:"Y.m.d" }}{% else %}Not published yet{% endif %}</span>
-                        by <span class="author">{{ posts.0.author.username }}</span>
-                    </p>
-                    <div class="teaser">
-                        {{ posts.0.teaser_html|safe }}
+                    <h2><a href="{% url sponsor_list %}"><span class="emphasis">{%trans "Sponsors!" %}</span></a></h2>
+                    <div id="sponsor_logos">
+                        <a href="http://www.webfaction.com/" target="_blank"><img style="max-height: 30px;" src="{{ STATIC_URL }}/img/wf.png" alt=""></a>
+                        <a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/zillians.png" alt=""></a>
                     </div>
+                    
+                    <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="贊助 PyConTW 2013！" href="http://tw.pycon.org/zh-tw/2013/blog/2012/11/21/how-to-pycon-taiwan-zh/">
+                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
+                        help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
+                    </a>
+                    <a class="btn btn-inverse hidden-desktop" title="贊助 PyConTW 2013！" href="http://tw.pycon.org/zh-tw/2013/blog/2012/11/21/how-to-pycon-taiwan-zh/" style="font-family: 'Droid Sans Mono';text-align: left;">
+                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br/>
+                        help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
+                    </a>
                 </div>
             </div>
         </div>
+        <div class="row-fluid">
         {% for post in posts %}
-        {% if forloop.counter0 > 0 %}
-            {% if forloop.counter0|start_row %}
-            <div class="row-fluid">
-            {% endif %}
-                <div class="span3 brick">
-                    <div class="blog-post">
-                        <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                        {% include "biblion/dateline.html" %}
-                        <div class="teaser">{{ post.teaser_html|safe }}</div>
-                    </div>
+            <div class="span6 brick">
+                <div class="blog-post">
+                    <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+                    {% include "biblion/dateline.html" %}
+                    <div class="teaser">{{ post.teaser_html|safe }}</div>
                 </div>
-                {% if posts.count < 4 and forloop.last or forloop.counter0 == 3 %}
-                <div class="span3 brick">
-                    <div class="blog-post">
-                        <h2><a href="{% url sponsor_list %}"><span class="emphasis">{%trans "Sponsors!" %}</span></a></h2>
-                        <div class="teaser">
-                            <a href="http://www.webfaction.com" target="_blank"><img src="{{ STATIC_URL }}/img/wf.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-                {% endif %}
-            {% if forloop.counter0|end_row %}
             </div>
+            {% if posts.count < 5 and forloop.last or forloop.counter == 4 %}
+            <!--
+            <div class="span3 brick">
+                <div class="blog-post">
+                    <h2><a href="{% url sponsor_list %}"><span class="emphasis">{%trans "Sponsors!" %}</span></a></h2>
+                    <div class="teaser">
+                        <a href="http://www.webfaction.com" target="_blank"><img src="{{ STATIC_URL }}/img/wf.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            -->
             {% endif %}
+        {% if forloop.counter|divisibleby:"2" %}
+        </div>
+        <div class="row-fluid">
         {% endif %}
         {% endfor %}
+        </div>
     </div>
 
     {#  SECTION: silver and media sponsors #}
