--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -63,22 +63,10 @@
                     <div class="teaser">{{ post.teaser_html|safe }}</div>
                 </div>
             </div>
-            {% if posts.count < 5 and forloop.last or forloop.counter == 4 %}
-            <!--
-            <div class="span3 brick">
-                <div class="blog-post">
-                    <h2><a href="{% url sponsor_list %}"><span class="emphasis">{%trans "Sponsors!" %}</span></a></h2>
-                    <div class="teaser">
-                        <a href="http://www.webfaction.com" target="_blank"><img src="{{ STATIC_URL }}/img/wf.png" alt=""></a>
-                    </div>
-                </div>
-            </div>
-            -->
-            {% endif %}
-        {% if forloop.counter|divisibleby:"2" %}
+            {% if forloop.counter|divisibleby:"2" and not forloop.last %}
         </div>
         <div class="row-fluid">
-        {% endif %}
+            {% endif %}
         {% endfor %}
         </div>
     </div>
