Fixed localization issue of homepage (for the sponsor area)

--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -43,12 +43,12 @@
                         <a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/zillians.png" alt=""></a>
                     </div>
                     
-                    <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="贊助 PyConTW 2013！" href="http://tw.pycon.org/zh-tw/2013/blog/2012/11/21/how-to-pycon-taiwan-zh/">
+                    <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
                         <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
                         help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
                     </a>
-                    <a class="btn btn-inverse hidden-desktop" title="贊助 PyConTW 2013！" href="http://tw.pycon.org/zh-tw/2013/blog/2012/11/21/how-to-pycon-taiwan-zh/" style="font-family: 'Droid Sans Mono';text-align: left;">
-                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br/>
+                    <a id="sponsor_button" class="btn btn-inverse hidden-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
+                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
                         help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
                     </a>
                 </div>
