--- a/pycon_project/templates/base.html
+++ b/pycon_project/templates/base.html
@@ -94,6 +94,7 @@
 
 
         <script type="text/javascript" src="{% block jquery_src %}https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js{% endblock %}"></script>
+        <script src="{{ STATIC_URL }}js/jquery.equalheight.js" type="text/javascript"></script>
         <script type="text/javascript">
             $(function(){
                 function dynamic_banner(){
@@ -102,6 +103,9 @@
                 }
                 dynamic_banner();
                 $(window).on("resize", dynamic_banner);
+
+                // equal height for posts on homepage
+                $(".row-fluid").equalHeight(".span6");
             })
         </script>
         <script src="{{ STATIC_URL }}js/base.js" type="text/javascript"></script>
@@ -109,6 +113,7 @@
         <!--script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script-->
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/jquery.markitup.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}markitup/sets/markdown-custom/set.js"></script>
+
         {% include "_facebox_js.html" %}
         <script type="text/javascript" charset="utf-8">
             $(document).ajaxSend(function(event, xhr, settings) {
