--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -35,7 +35,7 @@
                 <div id="pycon_intro">{% box "homepage_main" %}</div>
                 <img src="{{ STATIC_URL }}img/gallery.jpg" alt="">
             </div>
-            <div class="span6 brick sponsor_brick">
+            <div class="span6 brick">
                 <div class="blog-post">
                     <h2><a href="{% url sponsor_list %}"><span class="emphasis">{%trans "Sponsors!" %}</span></a></h2>
                     <div id="sponsor_logos">
@@ -44,13 +44,14 @@
                     </div>
                     
                     <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
-                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
-                        help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
+                    <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
+                    help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
                     </a>
                     <a id="sponsor_button" class="btn btn-inverse hidden-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
                         <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
                         help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
                     </a>
+                    <p>&nbsp;</p>
                 </div>
             </div>
         </div>
