Added logos to homepage: OSSF & YowuReport

--- a/pycon_project/templates/homepage.html
+++ b/pycon_project/templates/homepage.html
@@ -41,17 +41,20 @@
                     <div id="sponsor_logos">
                         <a href="http://www.webfaction.com/" target="_blank"><img style="max-height: 30px;" src="{{ STATIC_URL }}/img/wf.png" alt=""></a>
                         <a href="http://www.zillians.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/zillians.png" alt=""></a>
+                        <a href="http://www.openfoundry.org/" target="_blank"><img style="max-height: 35px;" src="{{ STATIC_URL }}/img/ossf.png" alt=""></a>
+                        <a href="http://yowureport.com/" target="_blank"><img style="max-height: 50px;" src="{{ STATIC_URL }}/img/yowu-1.jpeg" alt=""></a>
+
+                        <p>&nbsp;</p>
+
+                        <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
+                            <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
+                            help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
+                        </a>
+                        <a id="sponsor_button" class="btn btn-inverse hidden-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
+                            <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
+                            help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
+                        </a>
                     </div>
-                    
-                    <a id="sponsor_button" class="btn btn-large btn-inverse visible-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
-                    <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
-                    help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
-                    </a>
-                    <a id="sponsor_button" class="btn btn-inverse hidden-desktop" title="{%trans "Sponsor PyConTW 2013!" %}" href='{%trans "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/" %}'>
-                        <span style="color: #a6e22e;">from</span> future <span style="color: #a6e22e;">import</span> everything<br>
-                        help(<span style="color: #e6db74;">PyConTW2013.Sponsor</span>)
-                    </a>
-                    <p>&nbsp;</p>
                 </div>
             </div>
         </div>
